--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.15.0",
     "firebase": "^10.7.1",
     "geolib": "^3.3.1",
+    "mqtt": "^4.2.7",
     "three": "^0.124.0",
     "vue": "^2.6.11",
     "vue-count-to": "^1.0.13",
